base/productivity/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: productivity
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nextcloud
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: productivity
  labels:
    app.kubernetes.io/name: nextcloud-db
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nextcloud-db
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
