base/productivity/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: productivity
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/part-of: homelab
  annotations:
    cert-manager.io/cluster-issuer: stepca-acme
spec:
  ingressClassName: traefik
  rules:
    - host: cloud.sunnyside.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
    - hosts:
        - cloud.sunnyside.home
      secretName: nextcloud-tls
